<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/product_item_popup_menu_get_coupons"
        android:orderInCategory="100"
        android:icon="@drawable/ic_discount_black"
        android:title="@string/product_item_popup_menu_get_coupons_text" />

    <item
        android:id="@+id/product_item_popup_menu_contact_brand"
        android:orderInCategory="101"
        android:icon="@drawable/ic_contact"
        android:title="@string/product_item_card_action_share" />

    <item
        android:id="@+id/product_item_popup_menu_report"
        android:orderInCategory="102"
        android:icon="@drawable/ic_flag"
        android:title="@string/product_item_popup_menu_report_text" />
</menu>