<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_account_preference_title" />
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/profile_preferences_fragment"
            android:name="pingo.mobile.com.ui.user.fragments.ProfilePreferencesFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/profile_preferences_fragment_tag" />
        <TextView
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_account_info_title" />
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/profile_info_fragment"
            android:name="pingo.mobile.com.ui.user.fragments.ProfileInfoFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/profile_info_fragment_tag"/>

    </LinearLayout>




</FrameLayout>