<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/WhiteColor"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/brands_menu_id"
            android:background="@drawable/border_set"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_advertising"
                android:backgroundTint="@color/ColorPrimary"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/brands"
                android:layout_width="wrap_content"
                android:background="@drawable/menu_button_text"
                android:textColor="@color/ColorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/favorites_menu_id"
            android:background="@drawable/border_set"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_bubble_white"
                android:backgroundTint="@color/ColorPrimary"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/favorites"
                android:layout_width="wrap_content"
                android:background="@drawable/menu_button_text"
                android:textColor="@color/ColorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/profile_menu_id"
            android:background="@drawable/border_set"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_perm_identity_white"
                android:backgroundTint="@color/ColorPrimary"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/profile"
                android:layout_width="wrap_content"
                android:background="@drawable/menu_button_text"
                android:textColor="@color/ColorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/settings_menu_id"
            android:background="@drawable/border_set"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_settings_white"
                android:backgroundTint="@color/ColorPrimary"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/settings"
                android:background="@drawable/menu_button_text"
                android:layout_width="wrap_content"
                android:textColor="@color/ColorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/login_out_menu_id"
            android:background="@drawable/border_set"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_settings_white"
                android:backgroundTint="@color/ColorPrimary"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/login_out"
                android:background="@drawable/menu_button_text"
                android:layout_width="wrap_content"
                android:textColor="@color/ColorPrimary"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/main_menu_common"></include>
</RelativeLayout>